# dayu-topology

./: Cargo.toml  README.md  docker-compose.yml
crates/topology-api/: Cargo.toml
crates/topology-api/src/: error.rs  ingest.rs  lib.rs  pipeline.rs  query.rs  service.rs
crates/topology-api/src/ingest/: extracted.rs  json_fields.rs  record.rs  tests.rs
crates/topology-api/src/query/: helpers.rs
crates/topology-api/src/service/: materialize.rs  tests.rs
crates/topology-api/src/service/materialize/: business.rs  governance.rs  host.rs  process.rs  telemetry.rs
crates/topology-api/src/service/tests/: core.rs  process.rs
crates/topology-app/: Cargo.toml
crates/topology-app/src/: cli.rs  error.rs  graph.rs  http.rs  lib.rs  main.rs  payload_io.rs  run.rs  tests.rs
crates/topology-app/src/graph/: async_build.rs
crates/topology-app/tests/: smoke.rs
crates/topology-domain/: Cargo.toml
crates/topology-domain/src/: catalog.rs  common.rs  error.rs  governance.rs  ingest.rs  lib.rs  read_model.rs  runtime.rs  sync.rs
crates/topology-domain/src/ingest/: candidates.rs  tests.rs
crates/topology-domain/tests/: dayu_input_fixtures.rs
crates/topology-storage/: Cargo.toml
crates/topology-storage/migrations/: 0001_initial_schema.sql  README.md
crates/topology-storage/src/: lib.rs  memory.rs  migrations.rs  postgres.rs  repositories.rs
crates/topology-storage/src/memory/: async_impl.rs  catalog.rs  governance.rs  ingest.rs  runtime.rs  tests.rs
crates/topology-storage/src/postgres/: executors.rs  live_async.rs  row_decode.rs  sql.rs  sync_store.rs  tests.rs
crates/topology-storage/src/postgres/live_async/: live_catalog.rs  live_governance.rs  live_ingest.rs  live_runtime.rs
crates/topology-storage/src/postgres/sync_store/: catalog.rs  governance.rs  ingest.rs  runtime.rs
crates/topology-sync/: Cargo.toml
crates/topology-sync/src/: error.rs  lib.rs
doc/: README.md  glossary.md  review-findings.md
doc/architecture/: dataflow-and-pipeline-architecture.md  error-handling-architecture.md  external-sync-architecture.md  identity-resolution-architecture.md  ingest-and-normalization-architecture.md  network-modeling-analysis.md  observability-and-audit-architecture.md  project-charter.md  query-and-read-model-architecture.md  scenario-and-scope-model.md  security-and-access-control-architecture.md  service-and-deployment-architecture.md  storage-architecture.md  system-architecture.md  unified-model-overview.md  visual-architecture-guide.md
doc/architecture/docs/design/zh/: error_design_from_wp_motor_and_warp_parse.md
doc/external-integration/: README.md  dayu-edge-host-adapter-plan.md  external-glossary.md  external-input-format.md  external-input-spec.md  file-ingest-spec.md  input-taxonomy-and-style.md  warp-insight-adapter-spec.md  warp-insight-to-dayu-dataflow.md
doc/frontend/: api-contract.md  architecture.md
doc/internal/: README.md  processing-glossary.md
doc/model/: README.md  business-system-service-topology-model.md  cluster-namespace-workload-topology-model.md  endpoint-and-dependency-observation-model.md  host-inventory-and-runtime-state-schema.md  host-inventory-and-runtime-state-storage.md  host-inventory-and-runtime-state.md  host-pod-network-topology-model.md  host-process-software-vulnerability-graph.md  host-responsibility-and-maintainer-model.md  host-responsibility-sync-from-external-systems.md  public-vulnerability-source-ingestion.md  runtime-binding-model.md  software-normalization-and-vuln-enrichment.md  unified-topology-schema.md
doc/roadmap/: bootstrap-plan.md  development-plan.md  execution-plan.md  todo-backlog.md
fixtures/: dayu_edge_host_only.json  dayu_edge_host_only.jsonl  dayu_edge_host_process_sample.jsonl  dayu_edge_service_binding_sample.jsonl  dayu_telemetry_host_sample.jsonl  dayu_telemetry_process_sample.jsonl  p0_monolith_demo.json
scripts/: replay_pg_jsonl.py  sync_glossary.py
visualization/: index.html  package-lock.json  package.json  vite.config.ts
visualization/public/fixtures/: host-network-only.json
visualization/src/: App.tsx
visualization/src/api/: client.ts
visualization/src/components/: FilterBar.tsx  LayerLegend.tsx  NodeDetailPanel.tsx  TopologyCanvas.tsx
visualization/src/hooks/: useAppState.ts
visualization/src/types/: domain.ts
visualization/src/utils/: colors.ts  graph-to-cy.ts
