[workspace]
members = [
  "crates/topology-domain",
  "crates/topology-storage",
  "crates/topology-api",
  "crates/topology-sync",
  "crates/topology-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
authors = ["dayu-topology contributors"]

[workspace.dependencies]
axum = "0.8"
orion-error = { path = "../../orion-crates/orion-error", features = ["derive", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
