[package]
name = "topology-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
topology-domain = { path = "../topology-domain" }
uuid.workspace = true
