[package]
name = "topology-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
orion-error.workspace = true
serde.workspace = true
serde_json.workspace = true
topology-domain = { path = "../topology-domain" }
topology-storage = { path = "../topology-storage" }
uuid.workspace = true
