[package]
name = "topology-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
orion-error.workspace = true
serde.workspace = true
serde_json.workspace = true
topology-api = { path = "../topology-api" }
topology-domain = { path = "../topology-domain" }
topology-storage = { path = "../topology-storage" }
topology-sync = { path = "../topology-sync" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
