[package]
name = "topology-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
orion-error.workspace = true
topology-domain = { path = "../topology-domain" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1"] }
uuid.workspace = true
