[package]
name = "topology-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
topology-domain = { path = "../topology-domain" }
topology-storage = { path = "../topology-storage" }
