[package]
name = "topology-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
orion-error.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
topology-api = { path = "../topology-api" }
topology-domain = { path = "../topology-domain" }
topology-storage = { path = "../topology-storage" }
